@@ -1,3 +1,7 @@
+2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/sources/edict_file.rb: Rescue the exception raised when the
+    gz file is not valid.
 
 2007-11-28 Mathieu Blondel <mblondel@svn.gnome.org>
 
